Use proper stack IPs for corosync Virtual IPs
- Open relevant UDP ports
- Force restart of cinder-volume on 1st API node
- Jenkinsfile rearrange to puppetize API nodes individually

--- a/files/ooo-heat-stack.yml
+++ b/files/ooo-heat-stack.yml
@@ -177,6 +177,14 @@ resources:
           remote_ip_prefix: { get_param: ext_subnet_cidr }
           port_range_min: 1
           port_range_max: 65535
+        - protocol: udp
+          remote_ip_prefix: { get_param: mgmt_subnet_cidr }
+          port_range_min: 1
+          port_range_max: 65535
+        - protocol: udp
+          remote_ip_prefix: { get_param: ext_subnet_cidr }
+          port_range_min: 1
+          port_range_max: 65535
 
   ldap_secgroup:
     type: OS::Neutron::SecurityGroup
