--- a/playbooks/post_puppetize_apis.yml
+++ b/playbooks/post_puppetize_apis.yml
@@ -7,15 +7,10 @@
   vars:
     testuser_openrc: /root/testuser.sh
   tasks:
-    - name: Disable Horizon to keystone SSL verification
-      lineinfile:
-        path: /etc/openstack-dashboard/local_settings
-        regexp: '.*OPENSTACK_SSL_NO_VERIFY.*'
-        line: 'OPENSTACK_SSL_NO_VERIFY = True'
-    - name: Relax Horizon allowed hosts
-      shell: sed -i "s/^ALLOWED_HOSTS.*/ALLOWED_HOSTS = ['*', ]/" /etc/openstack-dashboard/local_settings
+#    - name: Relax Horizon allowed hosts
+#      shell: sed -i "s/^ALLOWED_HOSTS.*/ALLOWED_HOSTS = ['*', ]/" /etc/openstack-dashboard/local_settings
     - name: Change Horizon login backend to ldap
-      shell: sed -i 's/native/ldap/' /etc/openstack-dashboard/local_settings
+      shell: sed -i "s/'native'/'ldap'/" /etc/openstack-dashboard/local_settings
 #workaround: For the time being, don't use vanilla scripts for tenant creation and mapping
     - name: Create non-admin test project
       shell: source /root/openrc.admintoken; openstack project create testgroup --domain Default
