--- a/inventory/group_vars/mgrs/mgrs.yml
+++ b/inventory/group_vars/mgrs/mgrs.yml
@@ -2,13 +2,8 @@
 ansible_ssh_common_args: "-i {{ ansible_ssh_private_key_file }} -o ProxyCommand='ssh -i {{ ansible_ssh_private_key_file }} -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null -W %h:%p -q {{ vm_user_account }}@{{ hostvars['puppet-node']['ansible_ssh_host'] }}'"
 
 ceph_origin: distro
-ceph_stable_release: jewel
-monitor_interface: eth0
+ceph_stable_release: luminous
 public_network: "10.99.99.0/24"
-osd_scenario: collocated
-radosgw_interface: eth0
 fsid: "12345678-90ab-cdef-1234-567890abcdef"
 generate_fsid: false
-devices:
-  - /dev/vdb
-
+cephx: true
