--- a/inventory/group_vars/mons/mons.yml
+++ b/inventory/group_vars/mons/mons.yml
@@ -2,254 +2,11 @@
 ansible_ssh_common_args: "-i {{ ansible_ssh_private_key_file }} -o ProxyCommand='ssh -i {{ ansible_ssh_private_key_file }} -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null -W %h:%p -q {{ vm_user_account }}@{{ hostvars['puppet-node']['ansible_ssh_host'] }}'"
 
 ceph_origin: distro
-ceph_stable_release: jewel
+ceph_stable_release: luminous
 monitor_interface: eth0
 public_network: "10.99.99.0/24"
 osd_scenario: collocated
 radosgw_interface: eth0
 fsid: "12345678-90ab-cdef-1234-567890abcdef"
 generate_fsid: false
-
-openstack_config: true
-openstack_glance_pool:
-  name: glance-devel
-  pg_num: "{{ osd_pool_default_pg_num }}"
-  rule_name: ""
-openstack_cinder_pool:
-  name: cinder-devel
-  pg_num: "{{ osd_pool_default_pg_num }}"
-  rule_name: ""
-openstack_nova_pool:
-  name: vms-devel
-  pg_num: "{{ osd_pool_default_pg_num }}"
-  rule_name: ""
-
-# HOX! These pools are not used in Pouta environments.
-#
-#openstack_radosgw_root_pool:
-#  name: .rgw.root
-#  pg_num: "{{ osd_pool_default_pg_num }}"
-#  rule_name: ""
-#openstack_radosgw_zonegroup_root_pool:
-#  name: fi.rgw.root
-#  pg_num: "{{ osd_pool_default_pg_num }}"
-#  rule_name: ""
-
-openstack_radosgw_data_root_pool_1:
-  name: polte-devel-cloud.rgw.data.root
-  pg_num: "{{ osd_pool_default_pg_num }}"
-  rule_name: ""
-openstack_radosgw_control_pool_1:
-  name: polte-devel-cloud.rgw.control
-  pg_num: "{{ osd_pool_default_pg_num }}"
-  rule_name: ""
-openstack_radosgw_gc_pool_1:
-  name: polte-devel-cloud.rgw.gc
-  pg_num: "{{ osd_pool_default_pg_num }}"
-  rule_name: ""
-openstack_radosgw_log_pool_1:
-  name: polte-devel-cloud.rgw.log
-  pg_num: "{{ osd_pool_default_pg_num }}"
-  rule_name: ""
-openstack_radosgw_intent_log_pool_1:
-  name: polte-devel-cloud.rgw.intent-log
-  pg_num: "{{ osd_pool_default_pg_num }}"
-  rule_name: ""
-openstack_radosgw_usage_pool_1:
-  name: polte-devel-cloud.rgw.usage
-  pg_num: "{{ osd_pool_default_pg_num }}"
-  rule_name: ""
-openstack_radosgw_users_keys_pool_1:
-  name: polte-devel-cloud.rgw.users.keys
-  pg_num: "{{ osd_pool_default_pg_num }}"
-  rule_name: ""
-openstack_radosgw_users_email_pool_1:
-  name: polte-devel-cloud.rgw.users.email
-  pg_num: "{{ osd_pool_default_pg_num }}"
-  rule_name: ""
-openstack_radosgw_users_swift_pool_1:
-  name: polte-devel-cloud.rgw.users.swift
-  pg_num: "{{ osd_pool_default_pg_num }}"
-  rule_name: ""
-openstack_radosgw_users_uid_pool_1:
-  name: polte-devel-cloud.rgw.users.uid
-  pg_num: "{{ osd_pool_default_pg_num }}"
-  rule_name: ""
-openstack_radosgw_buckets_index_pool_1:
-  name: polte-devel-cloud.rgw.buckets.index
-  pg_num: "{{ osd_pool_default_pg_num }}"
-  rule_name: ""
-openstack_radosgw_buckets_data_pool_1:
-  name: polte-devel-cloud.rgw.buckets.data
-  pg_num: "{{ osd_pool_default_pg_num }}"
-  rule_name: ""
-openstack_radosgw_meta_pool_1:
-  name: polte-devel-cloud.rgw.meta
-  pg_num: "{{ osd_pool_default_pg_num }}"
-  rule_name: ""
-openstack_radosgw_root_pool_1:
-  name: polte-devel-cloud.rgw.root
-  pg_num: "{{ osd_pool_default_pg_num }}"
-  rule_name: ""
-
-# Ceph cluster zone sharing test pools.
-# Preserved just in case more testing is needed.
-
-# openstack_radosgw_data_root_pool_2:
-#   name: polte-devel-cloud2.rgw.data.root
-#   pg_num: "{{ osd_pool_default_pg_num }}"
-#   rule_name: ""
-# openstack_radosgw_control_pool_2:
-#   name: polte-devel-cloud2.rgw.control
-#   pg_num: "{{ osd_pool_default_pg_num }}"
-#   rule_name: ""
-# openstack_radosgw_gc_pool_2:
-#   name: polte-devel-cloud2.rgw.gc
-#   pg_num: "{{ osd_pool_default_pg_num }}"
-#   rule_name: ""
-# openstack_radosgw_log_pool_2:
-#   name: polte-devel-cloud2.rgw.log
-#   pg_num: "{{ osd_pool_default_pg_num }}"
-#   rule_name: ""
-# openstack_radosgw_intent_log_pool_2:
-#   name: polte-devel-cloud2.rgw.intent-log
-#   pg_num: "{{ osd_pool_default_pg_num }}"
-#   rule_name: ""
-# openstack_radosgw_usage_pool_2:
-#   name: polte-devel-cloud2.rgw.usage
-#   pg_num: "{{ osd_pool_default_pg_num }}"
-#   rule_name: ""
-# openstack_radosgw_users_keys_pool_2:
-#   name: polte-devel-cloud2.rgw.users.keys
-#   pg_num: "{{ osd_pool_default_pg_num }}"
-#   rule_name: ""
-# openstack_radosgw_users_email_pool_2:
-#   name: polte-devel-cloud2.rgw.users.email
-#   pg_num: "{{ osd_pool_default_pg_num }}"
-#   rule_name: ""
-# openstack_radosgw_users_swift_pool_2:
-#   name: polte-devel-cloud2.rgw.users.swift
-#   pg_num: "{{ osd_pool_default_pg_num }}"
-#   rule_name: ""
-# openstack_radosgw_users_uid_pool_2:
-#   name: polte-devel-cloud2.rgw.users.uid
-#   pg_num: "{{ osd_pool_default_pg_num }}"
-#   rule_name: ""
-# openstack_radosgw_buckets_index_pool_2:
-#   name: polte-devel-cloud2.rgw.buckets.index
-#   pg_num: "{{ osd_pool_default_pg_num }}"
-#   rule_name: ""
-# openstack_radosgw_buckets_data_pool_2:
-#   name: polte-devel-cloud2.rgw.buckets.data
-#   pg_num: "{{ osd_pool_default_pg_num }}"
-#   rule_name: ""
-# openstack_radosgw_meta_pool_2:
-#   name: polte-devel-cloud2.rgw.meta
-#   pg_num: "{{ osd_pool_default_pg_num }}"
-#   rule_name: ""
-# openstack_radosgw_root_pool_2:
-#   name: polte-devel-cloud2.rgw.root
-#   pg_num: "{{ osd_pool_default_pg_num }}"
-#   rule_name: ""
-
-openstack_pools:
-  - "{{ openstack_glance_pool }}"
-  - "{{ openstack_cinder_pool }}"
-  - "{{ openstack_nova_pool }}"
-
-  - "{{ openstack_radosgw_data_root_pool_1 }}"
-  - "{{ openstack_radosgw_control_pool_1 }}"
-  - "{{ openstack_radosgw_gc_pool_1 }}"
-  - "{{ openstack_radosgw_log_pool_1 }}"
-  - "{{ openstack_radosgw_intent_log_pool_1 }}"
-  - "{{ openstack_radosgw_usage_pool_1 }}"
-  - "{{ openstack_radosgw_users_keys_pool_1 }}"
-  - "{{ openstack_radosgw_users_email_pool_1 }}"
-  - "{{ openstack_radosgw_users_swift_pool_1 }}"
-  - "{{ openstack_radosgw_users_uid_pool_1 }}"
-  - "{{ openstack_radosgw_buckets_index_pool_1 }}"
-  - "{{ openstack_radosgw_buckets_data_pool_1 }}"
-  - "{{ openstack_radosgw_meta_pool_1 }}"
-  - "{{ openstack_radosgw_root_pool_1 }}"
-
-  # - "{{ openstack_radosgw_data_root_pool_2 }}"
-  # - "{{ openstack_radosgw_control_pool_2 }}"
-  # - "{{ openstack_radosgw_gc_pool_2 }}"
-  # - "{{ openstack_radosgw_log_pool_2 }}"
-  # - "{{ openstack_radosgw_intent_log_pool_2 }}"
-  # - "{{ openstack_radosgw_usage_pool_2 }}"
-  # - "{{ openstack_radosgw_users_keys_pool_2 }}"
-  # - "{{ openstack_radosgw_users_email_pool_2 }}"
-  # - "{{ openstack_radosgw_users_swift_pool_2 }}"
-  # - "{{ openstack_radosgw_users_uid_pool_2 }}"
-  # - "{{ openstack_radosgw_buckets_index_pool_2 }}"
-  # - "{{ openstack_radosgw_buckets_data_pool_2 }}"
-  # - "{{ openstack_radosgw_meta_pool_2 }}"
-  # - "{{ openstack_radosgw_root_pool_2 }}"
-
-openstack_keys:
-  - { name: client.glance-devel,
-      key: "{{ vault_glance_devel_key }}",
-      mon_cap: "allow r",
-      osd_cap: "allow class-read object_prefix rbd_children,
-                allow rwx pool={{ openstack_glance_pool.name }}",
-                mode: "0600",
-                acls: [] }
-  - { name: client.cinder-devel,
-      key: "{{ vault_cinder_devel_key }}",
-      mon_cap: "allow r",
-      osd_cap: "allow class-read object_prefix rbd_children,
-                allow rwx pool={{ openstack_cinder_pool.name }},
-                allow rwx pool={{ openstack_nova_pool.name }},
-                allow rx pool={{ openstack_glance_pool.name }}",
-                mode: "0600",
-                acls: []  }
-  - { name: client.nova-devel,
-      key: "{{ vault_nova_devel_key }}",
-      mon_cap: "allow r",
-      osd_cap: "allow class-read object_prefix rbd_children,
-                allow rwx pool={{ openstack_glance_pool.name }},
-                allow rwx pool={{ openstack_nova_pool.name }},
-                allow rwx pool={{ openstack_cinder_pool.name }}",
-                mode: "0600",
-                acls: [] }
-  - { name: client.radosgw.polte-devel-cloud,
-      key: "{{ vault_radosgw_devel_key }}",
-      mon_cap: "allow r",
-      osd_cap: "allow class-read object_prefix rbd_children,
-                allow rwx pool={{ openstack_radosgw_data_root_pool_1.name }},
-                allow rwx pool={{ openstack_radosgw_control_pool_1.name }},
-                allow rwx pool={{ openstack_radosgw_gc_pool_1.name }},
-                allow rwx pool={{ openstack_radosgw_log_pool_1.name }},
-                allow rwx pool={{ openstack_radosgw_intent_log_pool_1.name }},
-                allow rwx pool={{ openstack_radosgw_usage_pool_1.name }},
-                allow rwx pool={{ openstack_radosgw_users_keys_pool_1.name }},
-                allow rwx pool={{ openstack_radosgw_users_email_pool_1.name }},
-                allow rwx pool={{ openstack_radosgw_users_swift_pool_1.name }},
-                allow rwx pool={{ openstack_radosgw_users_uid_pool_1.name }},
-                allow rwx pool={{ openstack_radosgw_buckets_index_pool_1.name }},
-                allow rwx pool={{ openstack_radosgw_buckets_data_pool_1.name }},
-                allow rwx pool={{ openstack_radosgw_meta_pool_1.name }},
-                allow rwx pool={{ openstack_radosgw_root_pool_1.name }}",
-      mode: "0600",
-      acls: [] }
-  # - { name: client.radosgw.polte-devel-cloud2,
-  #     key: "{{ vault_radosgw_devel_key_2 }}",
-  #     mon_cap: "allow r",
-  #     osd_cap: "allow class-read object_prefix rbd_children,
-  #               allow rwx pool={{ openstack_radosgw_data_root_pool_2.name }},
-  #               allow rwx pool={{ openstack_radosgw_control_pool_2.name }},
-  #               allow rwx pool={{ openstack_radosgw_gc_pool_2.name }},
-  #               allow rwx pool={{ openstack_radosgw_log_pool_2.name }},
-  #               allow rwx pool={{ openstack_radosgw_intent_log_pool_2.name }},
-  #               allow rwx pool={{ openstack_radosgw_usage_pool_2.name }},
-  #               allow rwx pool={{ openstack_radosgw_users_keys_pool_2.name }},
-  #               allow rwx pool={{ openstack_radosgw_users_email_pool_2.name }},
-  #               allow rwx pool={{ openstack_radosgw_users_swift_pool_2.name }},
-  #               allow rwx pool={{ openstack_radosgw_users_uid_pool_2.name }},
-  #               allow rwx pool={{ openstack_radosgw_buckets_index_pool_2.name }},
-  #               allow rwx pool={{ openstack_radosgw_buckets_data_pool_2.name }},
-  #               allow rwx pool={{ openstack_radosgw_meta_pool_2.name }},
-  #               allow rwx pool={{ openstack_radosgw_root_pool_2.name }}",
-  #     mode: "0600",
-  #     acls: [] }
+cephx: true
