--- a/inventory/host_vars/puppet-node/vars.yml
+++ b/inventory/host_vars/puppet-node/vars.yml
@@ -4,3 +4,5 @@ ruby_gems_versions:
   - { gem: 'puppet_forge', version: '2.2.6' }
   - { gem: 'r10k', version: '2.2.2' }
   - { gem: 'hiera-eyaml', version: '' }
+puppet_etc_dir: /etc/puppetlabs/puppet
+puppet_code_dir: /etc/puppetlabs/code
