--- a/playbooks/puppetize_nets.yml
+++ b/playbooks/puppetize_nets.yml
@@ -2,5 +2,7 @@
 - hosts: net
   become: true
   become_user: root
+  pre_tasks:
+    - shell: modprobe ip_conntrack
   roles:
     - { role: ansible-role-puppetize, ansible_fqdn: "{{inventory_hostname_short}}.openstacklocal" }
