--- a/inventory/group_vars/osds/osds.yml
+++ b/inventory/group_vars/osds/osds.yml
@@ -219,7 +219,7 @@ openstack_keys:
                 allow rwx pool={{ openstack_cinder_pool.name }}",
                 mode: "0600",
                 acls: [] }
-  - { name: client.radosgw.polte-devel-cloud,
+  - { name: client.radosgw.polte-devel-cloud1,
       key: "{{ vault_radosgw_devel_key }}",
       mon_cap: "allow r",
       osd_cap: "allow class-read object_prefix rbd_children,
