--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-ansible==2.5.6
+ansible==2.5.14
 appdirs==1.4.3
 asn1crypto==0.22.0
 Babel==2.3.4
@@ -36,6 +36,7 @@ netifaces==0.10.6
 openstacksdk==0.9.17
 os-client-config==1.27.0
 osc-lib==1.6.0
+osc-placement==1.3.0
 oslo.config==4.6.0
 oslo.i18n==3.15.3
 oslo.serialization==2.18.0
