--- a/playbooks/puppetize_objs.yml
+++ b/playbooks/puppetize_objs.yml
@@ -11,3 +11,9 @@
         creates: /usr/bin/pip-python
   roles:
     - { role: ansible-role-puppetize, ansible_fqdn: "{{inventory_hostname_short}}.openstacklocal" }
+# HACK - remove when not needed.
+  post_tasks:
+    - shell: radosgw-admin --id radosgw.polte-devel-cloud1 realm create --rgw-realm=csc --default
+    - shell: radosgw-admin --id radosgw.polte-devel-cloud1 zonegroup create --rgw-zonegroup=polte-devel --endpoints=https://object-node0.ext.openstacklocal --rgw-realm=csc --master --default
+    - shell: radosgw-admin --id radosgw.polte-devel-cloud1 zone create --rgw-zonegroup=polte-devel --rgw-zone=polte-devel-cloud --master --default --endpoints=https://object-node0.ext.openstacklocal
+    - shell: radosgw-admin --id radosgw.polte-devel-cloud1 period update; radosgw-admin --id radosgw.polte-devel-cloud1 period update --commit
