--- a/playbooks/puppetize_compute.yml
+++ b/playbooks/puppetize_compute.yml
@@ -3,30 +3,30 @@
   become: true
   become_user: root
   pre_tasks:
-#workaround: Compensate for missing Spacewalk
-    - get_url:
-        url: https://raw.githubusercontent.com/rdo-infra/rdo-release/newton-rdo/rdo-release.repo
-        dest: /etc/yum.repos.d/rdo-release.repo
-        mode: 0644
-    - get_url:
-        url: https://raw.githubusercontent.com/rdo-infra/rdo-release/newton-rdo/RPM-GPG-KEY-CentOS-SIG-Cloud
-        dest: /etc/pki/rpm-gpg/RPM-GPG-KEY-CentOS-SIG-Cloud
-        mode: 0644
-#Pin to a specific repo in CentOS vault in order to get newton packages
-    - replace:
-        path: /etc/yum.repos.d/rdo-release.repo
-        regexp: 'http://mirror.centos.org.*openstack-newton/'
-        replace: 'http://vault.centos.org/centos/7.4.1708/cloud/x86_64/openstack-newton/'
-    - replace:
-        path: /etc/yum.repos.d/CentOS-OpenStack-newton.repo
-        regexp: 'http://mirror.centos.org.*openstack-newton/'
-        replace: 'http://vault.centos.org/centos/7.4.1708/cloud/x86_64/openstack-newton/'
-      ignore_errors: true
+##workaround: Compensate for missing Spacewalk
+#    - get_url:
+#        url: https://raw.githubusercontent.com/rdo-infra/rdo-release/newton-rdo/rdo-release.repo
+#        dest: /etc/yum.repos.d/rdo-release.repo
+#        mode: 0644
+#    - get_url:
+#        url: https://raw.githubusercontent.com/rdo-infra/rdo-release/newton-rdo/RPM-GPG-KEY-CentOS-SIG-Cloud
+#        dest: /etc/pki/rpm-gpg/RPM-GPG-KEY-CentOS-SIG-Cloud
+#        mode: 0644
+##Pin to a specific repo in CentOS vault in order to get newton packages
+#    - replace:
+#        path: /etc/yum.repos.d/rdo-release.repo
+#        regexp: 'http://mirror.centos.org.*openstack-newton/'
+#        replace: 'http://vault.centos.org/centos/7.4.1708/cloud/x86_64/openstack-newton/'
+#    - replace:
+#        path: /etc/yum.repos.d/CentOS-OpenStack-newton.repo
+#        regexp: 'http://mirror.centos.org.*openstack-newton/'
+#        replace: 'http://vault.centos.org/centos/7.4.1708/cloud/x86_64/openstack-newton/'
+#      ignore_errors: true
     - yum:
         name: "{{ item }}"
         state: present
       with_items:
-        - centos-release-openstack-newton.noarch
+        - centos-release-openstack-queens.noarch
         - unzip
         - ksh
         - libmcrypt
@@ -39,5 +39,6 @@
     - yum:
         name: /tmp/Linux/MegaCli-8.07.14-1.noarch.rpm
         state: present
+    - shell: sed -i 's/^exclude=\(.*\)$/exclude=\1,puppet*/' /etc/yum.repos.d/CentOS-OpenStack-queens.repo
   roles:
     - { role: ansible-role-puppetize, ansible_fqdn: "{{inventory_hostname_short}}.openstacklocal" }
