--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,21 @@
-ansible==2.5.15
+ansible==2.9.1,<2.10
+ansible-lint>=4.2.0
 appdirs==1.4.3
 asn1crypto==0.22.0
 Babel==2.3.4
+bcrypt==3.1.7
 certifi==2017.4.17
-cffi==1.10.0
+cffi==1.13.2
 chardet==3.0.4
 cliff==2.7.0
 cmd2==0.7.3
-cryptography==1.8.1
+cryptography==2.8
 debtcollector==1.15.0
 decorator==4.0.11
 deprecation==1.0.1
-dogpile.cache==0.6.2
+dogpile.cache==0.9.0
 enum34==1.1.6
 funcsigs==1.0.2
-functools32==3.2.3.post2
-futures==3.1.1
 idna==2.5
 ipaddress==1.0.18
 iso8601==0.1.11
@@ -24,9 +24,9 @@ jmespath==0.9.2
 jsonpatch==1.16
 jsonpointer==1.10
 jsonschema==2.6.0
-keystoneauth1==2.21.0
+keystoneauth1==3.18.0
 MarkupSafe==1.0
-mitogen==0.2.2
+mitogen==0.2.9
 monotonic==1.3
 msgpack-python==0.4.8
 munch==2.1.1
@@ -35,6 +35,7 @@ netaddr==0.7.19
 netifaces==0.10.6
 openstacksdk==0.9.17
 os-client-config==1.27.0
+os-service-types==1.7.0
 osc-lib==1.6.0
 osc-placement==1.3.0
 oslo.config==4.6.0
@@ -42,13 +43,14 @@ oslo.i18n==3.15.3
 oslo.serialization==2.18.0
 oslo.utils==3.26.0
 packaging==16.8
-paramiko==2.1.2
+paramiko==2.6.0
 pbr==3.1.1
 positional==1.1.1
 prettytable==0.7.2
 pyasn1==0.2.3
 pycparser==2.17
 pycrypto==2.6.1
+PyNaCl==1.3.0
 pyOpenSSL==16.2.0
 pyparsing==2.2.0
 python-cinderclient==2.2.0
@@ -63,10 +65,11 @@ python-novaclient==9.0.1
 python-openstackclient==3.11.0
 python-swiftclient==3.3.0
 pytz==2017.2
-PyYAML==3.12
+PyYAML==3.13
 requests==2.18.1
 requestsexceptions==1.2.0
 rfc3986==1.0.0
+ruamel.yaml==0.16.6
 shade==1.20.0
 simplejson==3.11.1
 six==1.10.0
