--- a/playbooks/puppet_environment_mods.yml
+++ b/playbooks/puppet_environment_mods.yml
@@ -17,41 +17,28 @@
       shell: 'sed -i "/hosts\.erb/d" {{puppet_code_dir}}/environments/{{puppet_environment}}/modules/cccp/manifests/role.pp'
     - name: workaround - ignore public network related errors
       shell: 'sed -i "s/python create-tenants.py/python create-tenants.py||\/bin\/true/" {{puppet_code_dir}}/environments/{{puppet_environment}}/modules/cccp/templates/tools/create-tenants.sh.erb'
-    - name: Point nova to SS CA
+    - name: Point non-glance services to self-signed CA
       lineinfile:
-        path: "{{puppet_code_dir}}/environments/{{puppet_environment}}/modules/cccp/manifests/profile/nova.pp"
-        insertafter: "::nova::keystone::authtoken"
+        path: "{{puppet_code_dir}}/environments/{{puppet_environment}}/modules/cccp/manifests/profile/{{item}}.pp"
+        insertafter: "::{{item}}::keystone::authtoken"
         line: "    cafile              => '/etc/pki/ca-trust/extracted/openssl/ca-bundle.trust.crt',"
-    - name: Point glance to SS CA
+      with_items:
+        - nova
+        - neutron
+        - cinder
+        - heat
+        - barbican
+    - name: Point glance to self-signed CA
       lineinfile:
         path: "{{puppet_code_dir}}/environments/{{puppet_environment}}/modules/cccp/manifests/profile/glance.pp"
         insertafter: "::glance::api::authtoken"
         line: "    cafile              => '/etc/pki/ca-trust/extracted/openssl/ca-bundle.trust.crt',"
-    - name: Point neutron to SS CA
-      lineinfile:
-        path: "{{puppet_code_dir}}/environments/{{puppet_environment}}/modules/cccp/manifests/profile/neutron.pp"
-        insertafter: "::neutron::keystone::authtoken"
-        line: "    cafile              => '/etc/pki/ca-trust/extracted/openssl/ca-bundle.trust.crt',"
-    - name: Point cinder to SS CA
-      lineinfile:
-        path: "{{puppet_code_dir}}/environments/{{puppet_environment}}/modules/cccp/manifests/profile/cinder.pp"
-        insertafter: "::cinder::keystone::authtoken"
-        line: "    cafile              => '/etc/pki/ca-trust/extracted/openssl/ca-bundle.trust.crt',"
-    - name: Point heat to SS CA
-      lineinfile:
-        path: "{{puppet_code_dir}}/environments/{{puppet_environment}}/modules/cccp/manifests/profile/heat.pp"
-        insertafter: "::heat::keystone::authtoken"
-        line: "    cafile              => '/etc/pki/ca-trust/extracted/openssl/ca-bundle.trust.crt',"
-    - name: Point barbican to SS CA
-      lineinfile:
-        path: "{{puppet_code_dir}}/environments/{{puppet_environment}}/modules/cccp/manifests/profile/barbican.pp"
-        insertafter: "::barbican::keystone::authtoken"
-        line: "    cafile              => '/etc/pki/ca-trust/extracted/openssl/ca-bundle.trust.crt',"
-    - name: Point magnum to SS CA
-      lineinfile:
-        path: "{{puppet_code_dir}}/environments/{{puppet_environment}}/modules/cccp/manifests/profile/magnum.pp"
-        insertafter: "::magnum::keystone::authtoken':"
-        line: "    cafile              => '/etc/pki/ca-trust/extracted/openssl/ca-bundle.trust.crt',"
+    - name: p4 - Lobotomize ChanceWeigher
+      shell: 'sed -i "/figuring/,+4d" "{{puppet_code_dir}}/environments/{{puppet_environment}}/modules/cccp/manifests/profile/cinder.pp"'
+    - name: p4 - Change keystone mapping table hack target db host
+      shell: 'sed -i "s/127.0.0.1/galera-node0.openstacklocal/" "{{puppet_code_dir}}/environments/{{puppet_environment}}/modules/cccp/manifests/profile/keystone.pp"'
+    - name: workaround - modify db connection strings since tunneling doesn't work
+      shell: 'sed -i "s/localhost/galera-node0.openstacklocal/" "{{puppet_code_dir}}/environments/{{puppet_environment}}/modules/cccp/manifests/profile/barbican.pp"'
     - name: Populate external ping hosts with nodes' own addresses
       lineinfile:
         backrefs: yes
@@ -72,12 +59,3 @@
       shell: sed -i "s/hiera('ha_primary_api_ip')/'{{ hostvars['api-node0']['ansible_eth0']['ipv4']['address'] }}'/" "{{puppet_code_dir}}/environments/{{puppet_environment}}/modules/cccp/manifests/role/frontend/api.pp"
     - name: Populate int IP 1
       shell: sed -i "s/hiera('ha_secondary_api_ip')/'{{ hostvars['api-node1']['ansible_eth0']['ipv4']['address'] }}'/" "{{puppet_code_dir}}/environments/{{puppet_environment}}/modules/cccp/manifests/role/frontend/api.pp"
-    - name: p4 - Lobotomize ChanceWeigher
-      shell: 'sed -i "/figuring/,+4d" "{{puppet_code_dir}}/environments/{{puppet_environment}}/modules/cccp/manifests/profile/cinder.pp"'
-    - name: p4 - Change keystone mapping table hack target db host
-      shell: 'sed -i "s/127.0.0.1/galera-node0.openstacklocal/" "{{puppet_code_dir}}/environments/{{puppet_environment}}/modules/cccp/manifests/profile/keystone.pp"'
-    - name: workaround - modify db connection strings since tunneling doesn't work
-      shell: 'sed -i "s/localhost/galera-node0.openstacklocal/" "{{puppet_code_dir}}/environments/{{puppet_environment}}/modules/cccp/manifests/profile/{{ item }}.pp"'
-      with_items:
-       - magnum
-       - barbican
