Skip puppetmaster stuff if puppet env exists
- Legibility fixen
- Try regenerating types just before api puppetize

--- a/playbooks/puppetize_apis_loop.yml
+++ b/playbooks/puppetize_apis_loop.yml
@@ -1,5 +1,9 @@
 ---
 # Puppetize API nodes.
+- hosts: puppet
+  tasks:
+    - name: regenerate types for the environments to prevent autoload issues
+      command: "/opt/puppetlabs/bin/puppet generate types --environment {{ puppet_environment }}"
 
 - hosts: api
   become: true
