--- a/playbooks/puppetize_nets.yml
+++ b/playbooks/puppetize_nets.yml
@@ -2,6 +2,9 @@
 - hosts: net
   become: true
   become_user: root
+  gather_facts: no
+  vars:
+    puppet_run_only: True
   pre_tasks:
     - shell: modprobe ip_conntrack
   roles:
