--- a/requirements.txt
+++ b/requirements.txt
@@ -2,80 +2,90 @@ ansible==2.9.1,<2.10
 ansible-lint>=4.2.0
 appdirs==1.4.3
 asn1crypto==0.22.0
-Babel==2.3.4
+attrs==19.3.0
+Babel==2.8.0
 bcrypt==3.1.7
-certifi==2017.4.17
-cffi==1.13.2
+certifi==2019.11.28
+cffi==1.14.0
 chardet==3.0.4
-cliff==2.7.0
-cmd2==0.7.3
+cliff==2.11.0
+cmd2<=0.10.0
+colorama==0.4.3
 cryptography==2.8
-debtcollector==1.15.0
-decorator==4.0.11
-deprecation==1.0.1
+debtcollector==1.19.0
+decorator==4.4.1
+deprecation==2.0.7
 dogpile.cache==0.9.0
 enum34==1.1.6
 funcsigs==1.0.2
-idna==2.5
+idna==2.8
 ipaddress==1.0.18
-iso8601==0.1.11
-Jinja2==2.9.6
-jmespath==0.9.2
-jsonpatch==1.16
-jsonpointer==1.10
+iso8601==0.1.12
+Jinja2==2.11.1
+jmespath==0.9.4
+jsonpatch==1.25
+jsonpointer==2.0
 jsonschema==2.6.0
 keystoneauth1==3.18.0
 MarkupSafe==1.0
 mitogen==0.2.9
-monotonic==1.3
+monotonic==1.5
+msgpack==0.6.2
 msgpack-python==0.4.8
-munch==2.1.1
+munch==2.5.0
 ndg-httpsclient==0.4.2
 netaddr==0.7.19
-netifaces==0.10.6
-openstacksdk==0.9.17
-os-client-config==1.27.0
+netifaces==0.10.9
+openstacksdk==0.41.0
+os-client-config==1.29.0
 os-service-types==1.7.0
-osc-lib==1.6.0
-osc-placement==1.3.0
-oslo.config==4.6.0
-oslo.i18n==3.15.3
-oslo.serialization==2.18.0
-oslo.utils==3.26.0
-packaging==16.8
+osc-lib==1.12.0
+osc-placement==1.0.0
+oslo.config==5.2.0
+oslo.context<=3.0.0
+oslo.i18n==3.19.0
+oslo.log==3.36.0
+oslo.serialization==2.24.0
+oslo.utils==3.35.1
+packaging==20.1
 paramiko==2.6.0
-pbr==3.1.1
+pbr==5.4.4
 positional==1.1.1
 prettytable==0.7.2
 pyasn1==0.2.3
-pycparser==2.17
+pycparser==2.19
 pycrypto==2.6.1
 PyNaCl==1.3.0
-pyOpenSSL==16.2.0
-pyparsing==2.2.0
-python-cinderclient==2.2.0
-python-designateclient==2.6.0
-python-glanceclient==2.7.0
-python-heatclient==1.5.1
-python-ironicclient==1.13.0
-python-keystoneclient==3.11.0
+pyOpenSSL==19.1.0
+pyparsing==2.4.6
+pyperclip==1.7.0
+python-cinderclient==3.5.0
+python-dateutil==2.8.1
+python-designateclient==2.9.0
+python-glanceclient==2.10.1
+python-heatclient==1.14.1
+python-ironicclient==2.2.2
+python-keystoneclient==3.15.1
+python-magnumclient==2.9.1
 python-memcached==1.58
-python-neutronclient==6.0.0
-python-novaclient==9.0.1
-python-openstackclient==3.11.0
-python-swiftclient==3.3.0
-pytz==2017.2
-PyYAML==3.13
-requests==2.18.1
-requestsexceptions==1.2.0
-rfc3986==1.0.0
-ruamel.yaml==0.16.6
-shade==1.20.0
-simplejson==3.11.1
-six==1.10.0
-stevedore==1.23.0
+python-neutronclient==6.7.0
+python-novaclient==10.1.1
+python-openstackclient==3.14.3
+python-swiftclient==3.5.1
+pytz==2019.3
+PyYAML==5.3
+requests==2.22.0
+requestsexceptions==1.4.0
+rfc3986==1.3.2
+ruamel.yaml==0.16.10
+ruamel.yaml.clib==0.2.0
+shade==1.27.2
+simplejson==3.17.0
+six==1.14.0
+stevedore==1.32.0
 unicodecsv==0.14.1
-urllib3==1.21.1
+urllib3==1.25.8
 virtualenv==15.1.0
-warlock==1.2.0
-wrapt==1.10.10
+warlock==1.3.3
+wcwidth==0.1.8
+wrapt==1.11.2
