--- a/inventory/group_vars/net.yml
+++ b/inventory/group_vars/net.yml
@@ -1,2 +1,3 @@
 ---
 ansible_ssh_common_args: "-i {{ ansible_ssh_private_key_file }} -o ProxyCommand='ssh -i {{ ansible_ssh_private_key_file }} -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null -W %h:%p -q {{ vm_user_account }}@{{ hostvars['puppet-node']['ansible_ssh_host'] }}'"
+puppetize_time_difference: 600
