Use ceph-ansible stable-4.0
- Nautilus
- Ansible 2.9
- Basic CRUSH
- Some commented out stuff for autoscaler and switching between
  profile vs. allow rwx

--- a/playbooks/generate_hostsfile.yml
+++ b/playbooks/generate_hostsfile.yml
@@ -39,7 +39,7 @@
           ONBOOT="yes"
           PEERDNS="no"
         dest: /etc/sysconfig/network-scripts/ifcfg-{{ item }}
-      with_items: "{{ ansible_interfaces | difference('lo') | difference('fake0') }}"
+      with_items: "{{ ansible_interfaces | difference('lo') | difference('fake0') | difference('docker0') }}"
       notify:
         - Reboot
     - name: Flush handlers
