--- a/inventory/group_vars/mons/mons.yml
+++ b/inventory/group_vars/mons/mons.yml
@@ -2,7 +2,7 @@
 ansible_ssh_common_args: "-i {{ ansible_ssh_private_key_file }} -o ProxyCommand='ssh -i {{ ansible_ssh_private_key_file }} -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null -W %h:%p -q {{ vm_user_account }}@{{ hostvars['puppet-node']['ansible_ssh_host'] }}'"
 
 ceph_origin: distro
-ceph_stable_release: luminous
+ceph_stable_release: nautilus
 monitor_interface: eth0
 public_network: "10.99.99.0/24"
 osd_scenario: collocated
@@ -10,3 +10,4 @@ radosgw_interface: eth0
 fsid: "12345678-90ab-cdef-1234-567890abcdef"
 generate_fsid: false
 cephx: true
+dashboard_enabled: false
