--- a/inventory/group_vars/osds/osds.yml
+++ b/inventory/group_vars/osds/osds.yml
@@ -2,7 +2,7 @@
 ansible_ssh_common_args: "-i {{ ansible_ssh_private_key_file }} -o ProxyCommand='ssh -i {{ ansible_ssh_private_key_file }} -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null -W %h:%p -q {{ vm_user_account }}@{{ hostvars['puppet-node']['ansible_ssh_host'] }}'"
 
 ceph_origin: distro
-ceph_stable_release: luminous
+ceph_stable_release: nautilus
 monitor_interface: eth0
 public_network: "10.99.99.0/24"
 osd_scenario: collocated
@@ -16,21 +16,36 @@ devices:
 osd_pool_default_pg_num: 8
 osd_pool_default_size: 1
 
+crush_rule_config: true
+crush_rules:
+  - name: HDD
+    root: mon-roottt
+    type: host
+    class: hdd
+    default: true
+create_crush_tree: true
+
 openstack_config: true
 openstack_glance_pool:
   name: glance-devel
   pg_num: "{{ osd_pool_default_pg_num }}"
-  rule_name: ""
+  #pg_autoscale_mode: True
+  #target_size_ratio: 0.2
+  rule_name: "HDD"
   application: "rbd"
 openstack_cinder_pool:
   name: cinder-devel
   pg_num: "{{ osd_pool_default_pg_num }}"
-  rule_name: ""
+  #pg_autoscale_mode: True
+  #target_size_ratio: 0.2
+  rule_name: "HDD"
   application: "rbd"
 openstack_nova_pool:
   name: vms-devel
   pg_num: "{{ osd_pool_default_pg_num }}"
-  rule_name: ""
+  #pg_autoscale_mode: True
+  #target_size_ratio: 0.2
+  rule_name: "HDD"
   application: "rbd"
 
 # HOX! These pools are not used in Pouta environments.
@@ -47,72 +62,100 @@ openstack_nova_pool:
 openstack_radosgw_data_root_pool_1:
   name: polte-devel-cloud.rgw.data.root
   pg_num: "{{ osd_pool_default_pg_num }}"
-  rule_name: ""
+  #pg_autoscale_mode: True
+  #target_size_ratio: 0.2
+  rule_name: "HDD"
   application: "rgw"
 openstack_radosgw_control_pool_1:
   name: polte-devel-cloud.rgw.control
   pg_num: "{{ osd_pool_default_pg_num }}"
-  rule_name: ""
+  #pg_autoscale_mode: True
+  #target_size_ratio: 0.2
+  rule_name: "HDD"
   application: "rgw"
 openstack_radosgw_gc_pool_1:
   name: polte-devel-cloud.rgw.gc
   pg_num: "{{ osd_pool_default_pg_num }}"
-  rule_name: ""
+  #pg_autoscale_mode: True
+  #target_size_ratio: 0.2
+  rule_name: "HDD"
   application: "rgw"
 openstack_radosgw_log_pool_1:
   name: polte-devel-cloud.rgw.log
   pg_num: "{{ osd_pool_default_pg_num }}"
-  rule_name: ""
+  #pg_autoscale_mode: True
+  #target_size_ratio: 0.2
+  rule_name: "HDD"
   application: "rgw"
 openstack_radosgw_intent_log_pool_1:
   name: polte-devel-cloud.rgw.intent-log
   pg_num: "{{ osd_pool_default_pg_num }}"
-  rule_name: ""
+  #pg_autoscale_mode: True
+  #target_size_ratio: 0.2
+  rule_name: "HDD"
   application: "rgw"
 openstack_radosgw_usage_pool_1:
   name: polte-devel-cloud.rgw.usage
   pg_num: "{{ osd_pool_default_pg_num }}"
-  rule_name: ""
+  #pg_autoscale_mode: True
+  #target_size_ratio: 0.2
+  rule_name: "HDD"
   application: "rgw"
 openstack_radosgw_users_keys_pool_1:
   name: polte-devel-cloud.rgw.users.keys
   pg_num: "{{ osd_pool_default_pg_num }}"
-  rule_name: ""
+  #pg_autoscale_mode: True
+  #target_size_ratio: 0.2
+  rule_name: "HDD"
   application: "rgw"
 openstack_radosgw_users_email_pool_1:
   name: polte-devel-cloud.rgw.users.email
   pg_num: "{{ osd_pool_default_pg_num }}"
-  rule_name: ""
+  #pg_autoscale_mode: True
+  #target_size_ratio: 0.2
+  rule_name: "HDD"
   application: "rgw"
 openstack_radosgw_users_swift_pool_1:
   name: polte-devel-cloud.rgw.users.swift
   pg_num: "{{ osd_pool_default_pg_num }}"
-  rule_name: ""
+  #pg_autoscale_mode: True
+  #target_size_ratio: 0.2
+  rule_name: "HDD"
   application: "rgw"
 openstack_radosgw_users_uid_pool_1:
   name: polte-devel-cloud.rgw.users.uid
   pg_num: "{{ osd_pool_default_pg_num }}"
-  rule_name: ""
+  #pg_autoscale_mode: True
+  #target_size_ratio: 0.2
+  rule_name: "HDD"
   application: "rgw"
 openstack_radosgw_buckets_index_pool_1:
   name: polte-devel-cloud.rgw.buckets.index
   pg_num: "{{ osd_pool_default_pg_num }}"
-  rule_name: ""
+  #pg_autoscale_mode: True
+  #target_size_ratio: 0.2
+  rule_name: "HDD"
   application: "rgw"
 openstack_radosgw_buckets_data_pool_1:
   name: polte-devel-cloud.rgw.buckets.data
   pg_num: "{{ osd_pool_default_pg_num }}"
-  rule_name: ""
+  #pg_autoscale_mode: True
+  #target_size_ratio: 0.2
+  rule_name: "HDD"
   application: "rgw"
 openstack_radosgw_meta_pool_1:
   name: polte-devel-cloud.rgw.meta
   pg_num: "{{ osd_pool_default_pg_num }}"
-  rule_name: ""
+  #pg_autoscale_mode: True
+  #target_size_ratio: 0.2
+  rule_name: "HDD"
   application: "rgw"
 openstack_radosgw_root_pool_1:
   name: polte-devel-cloud.rgw.root
   pg_num: "{{ osd_pool_default_pg_num }}"
-  rule_name: ""
+  #pg_autoscale_mode: True
+  #target_size_ratio: 0.2
+  rule_name: "HDD"
   application: "rgw"
 
 # Ceph cluster zone sharing test pools.
@@ -213,49 +256,78 @@ openstack_pools:
 openstack_keys:
   - { name: client.glance-devel,
       key: "{{ vault_glance_devel_key }}",
-      mon_cap: "allow r",
-      osd_cap: "allow class-read object_prefix rbd_children,
-                allow rwx pool={{ openstack_glance_pool.name }}",
-                mode: "0600",
-                acls: [] }
+      #mon_cap: "allow r",
+      #osd_cap: "allow class-read object_prefix rbd_children,
+      #          allow rwx pool={{ openstack_glance_pool.name }}",
+      #          mode: "0600",
+      #          acls: [] }
+      caps: { mon: "profile rbd",
+              osd: "profile rbd pool={{ openstack_glance_pool.name }}" },
+      mode: "0600" }
   - { name: client.cinder-devel,
       key: "{{ vault_cinder_devel_key }}",
-      mon_cap: "allow r",
-      osd_cap: "allow class-read object_prefix rbd_children,
-                allow rwx pool={{ openstack_cinder_pool.name }},
-                allow rwx pool={{ openstack_nova_pool.name }},
-                allow rx pool={{ openstack_glance_pool.name }}",
-                mode: "0600",
-                acls: []  }
+      #mon_cap: "allow r",
+      #osd_cap: "allow class-read object_prefix rbd_children,
+      #          allow rwx pool={{ openstack_cinder_pool.name }},
+      #          allow rwx pool={{ openstack_nova_pool.name }},
+      #          allow rx pool={{ openstack_glance_pool.name }}",
+      #          mode: "0600",
+      #          acls: []  }
+      caps: { mon: "profile rbd",
+              osd: "profile rbd pool={{ openstack_cinder_pool.name }},
+                    profile rbd pool={{ openstack_nova_pool.name }},
+                    profile rbd pool={{ openstack_glance_pool.name }}" },
+      mode: "0600" }
   - { name: client.nova-devel,
       key: "{{ vault_nova_devel_key }}",
-      mon_cap: "allow r",
-      osd_cap: "allow class-read object_prefix rbd_children,
-                allow rwx pool={{ openstack_glance_pool.name }},
-                allow rwx pool={{ openstack_nova_pool.name }},
-                allow rwx pool={{ openstack_cinder_pool.name }}",
-                mode: "0600",
-                acls: [] }
+      #mon_cap: "allow r",
+      #osd_cap: "allow class-read object_prefix rbd_children,
+      #          allow rwx pool={{ openstack_glance_pool.name }},
+      #          allow rwx pool={{ openstack_nova_pool.name }},
+      #          allow rwx pool={{ openstack_cinder_pool.name }}",
+      #          mode: "0600",
+      #          acls: [] }
+      caps: { mon: "profile rbd",
+              osd: "profile rbd pool={{ openstack_cinder_pool.name }},
+                    profile rbd pool={{ openstack_nova_pool.name }},
+                    profile rbd pool={{ openstack_glance_pool.name }}" },
+      mode: "0600" }
   - { name: client.radosgw.polte-devel-cloud1,
       key: "{{ vault_radosgw_devel_key }}",
-      mon_cap: "allow r",
-      osd_cap: "allow class-read object_prefix rbd_children,
-                allow rwx pool={{ openstack_radosgw_data_root_pool_1.name }},
-                allow rwx pool={{ openstack_radosgw_control_pool_1.name }},
-                allow rwx pool={{ openstack_radosgw_gc_pool_1.name }},
-                allow rwx pool={{ openstack_radosgw_log_pool_1.name }},
-                allow rwx pool={{ openstack_radosgw_intent_log_pool_1.name }},
-                allow rwx pool={{ openstack_radosgw_usage_pool_1.name }},
-                allow rwx pool={{ openstack_radosgw_users_keys_pool_1.name }},
-                allow rwx pool={{ openstack_radosgw_users_email_pool_1.name }},
-                allow rwx pool={{ openstack_radosgw_users_swift_pool_1.name }},
-                allow rwx pool={{ openstack_radosgw_users_uid_pool_1.name }},
-                allow rwx pool={{ openstack_radosgw_buckets_index_pool_1.name }},
-                allow rwx pool={{ openstack_radosgw_buckets_data_pool_1.name }},
-                allow rwx pool={{ openstack_radosgw_meta_pool_1.name }},
-                allow rwx pool={{ openstack_radosgw_root_pool_1.name }}",
-      mode: "0600",
-      acls: [] }
+      #mon_cap: "allow r",
+      #osd_cap: "allow class-read object_prefix rbd_children,
+      #          allow rwx pool={{ openstack_radosgw_data_root_pool_1.name }},
+      #          allow rwx pool={{ openstack_radosgw_control_pool_1.name }},
+      #          allow rwx pool={{ openstack_radosgw_gc_pool_1.name }},
+      #          allow rwx pool={{ openstack_radosgw_log_pool_1.name }},
+      #          allow rwx pool={{ openstack_radosgw_intent_log_pool_1.name }},
+      #          allow rwx pool={{ openstack_radosgw_usage_pool_1.name }},
+      #          allow rwx pool={{ openstack_radosgw_users_keys_pool_1.name }},
+      #          allow rwx pool={{ openstack_radosgw_users_email_pool_1.name }},
+      #          allow rwx pool={{ openstack_radosgw_users_swift_pool_1.name }},
+      #          allow rwx pool={{ openstack_radosgw_users_uid_pool_1.name }},
+      #          allow rwx pool={{ openstack_radosgw_buckets_index_pool_1.name }},
+      #          allow rwx pool={{ openstack_radosgw_buckets_data_pool_1.name }},
+      #          allow rwx pool={{ openstack_radosgw_meta_pool_1.name }},
+      #          allow rwx pool={{ openstack_radosgw_root_pool_1.name }}",
+      #mode: "0600",
+      #acls: [] }
+      caps: { mon: "profile rbd",
+              osd: "profile rbd pool={{ openstack_radosgw_data_root_pool_1.name }},
+                    profile rbd pool={{ openstack_radosgw_control_pool_1.name }},
+                    profile rbd pool={{ openstack_radosgw_gc_pool_1.name }},
+                    profile rbd pool={{ openstack_radosgw_log_pool_1.name }},
+                    profile rbd pool={{ openstack_radosgw_intent_log_pool_1.name }},
+                    profile rbd pool={{ openstack_radosgw_usage_pool_1.name }},
+                    profile rbd pool={{ openstack_radosgw_users_keys_pool_1.name }},
+                    profile rbd pool={{ openstack_radosgw_users_email_pool_1.name }},
+                    profile rbd pool={{ openstack_radosgw_users_swift_pool_1.name }},
+                    profile rbd pool={{ openstack_radosgw_users_uid_pool_1.name }},
+                    profile rbd pool={{ openstack_radosgw_buckets_index_pool_1.name }},
+                    profile rbd pool={{ openstack_radosgw_buckets_data_pool_1.name }},
+                    profile rbd pool={{ openstack_radosgw_meta_pool_1.name }},
+                    profile rbd pool={{ openstack_radosgw_root_pool_1.name }}" },
+      mode: "0600" }
   # - { name: client.radosgw.polte-devel-cloud2,
   #     key: "{{ vault_radosgw_devel_key_2 }}",
   #     mon_cap: "allow r",
